# Orchard

./: $DB  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  apple-semantic-grapgh.md  hatch_build.py  orchard-feedback.md  pyproject.toml
.claude/: mcp.json
.durable-workflow-runtime/runs/: run_97a5d73a1f.json
docs/: orchard-usage-guide.md
skills/orchard/: SKILL.md
skills/orchard-cli/: SKILL.md
skills/orchard-debugging/: SKILL.md
skills/orchard-exploring/: SKILL.md
skills/orchard-impact-analysis/: SKILL.md
src/orchard/: cli.py  logging.py  server.py  setup.py
swift/: build-cli.sh
swift/orchard-indexstore-reader/: Package.resolved  Package.swift
tests/: conftest.py  test_acceptance.py  test_acceptance_m3.py  test_acceptance_m4.py  test_acceptance_m5.py  test_logging.py  test_noise_filter.py  test_setup_block.py  test_setup_skill.py
tests/fixtures/: sample_symbols.json
tests/test_build/: test_context.py  test_discovery.py
tests/test_derive/: __init__.py  test_architecture.py  test_bridge.py  test_bridge_cross_language.py  test_bridge_cross_language_fill.py  test_community_detection.py  test_mro.py  test_notification_graph.py  test_process_detection.py  test_swiftui.py
tests/test_docs/: test_orchard_skill_boundary.py
tests/test_graph/: test_confidence.py  test_connection_visibility.py  test_knowledge_graph.py  test_schema.py
tests/test_handlers/: test_impact_freshness_wiring.py  test_impact_subtype.py  test_impact_subtype_wiring.py
tests/test_ingest/: test_indexstore.py  test_indexstore_real_cli.py  test_swiftinterface.py  (+1 more)
(+206 files in other folders)
