[project]
name = "orchard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ladybug>=0.17.1",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
orchard-mcp = "orchard.mcp.server:main"
orchard = "orchard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchard"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
