[project]
name = "orchard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "igraph>=1.0.0",
    "ladybug>=0.17.1",
    "leidenalg>=0.12.0",
    "llama-cpp-python>=0.3.0",
    "mcp>=1.0.0",
]

[project.scripts]
orchard = "orchard.cli:main"
orchard-mcp = "orchard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchard"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
